--- a/style.css
+++ b/style.css
@@ -27,11 +27,14 @@ section {
 
 section.alternate-background {
   background-color: #00a699;
+
   color: #fff;
+  padding: 40px;
 }
 
-main img {
-  width: 100px;
+#ideas {
+  display: flex;
+  flex-direction: column;
 }
 
 /* ---  Groups & Items --- */
@@ -64,8 +67,10 @@ header {
   color: #fff;
 }
 
-header nav ul li {
+header nav ul {
   list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 header nav ul li a {
@@ -94,6 +99,12 @@ form input {
   margin-bottom: 20px;
   width: 180px;
 }
+form div {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin: 10px;
+}
 
 form button {
   background-color: #ff385c;
@@ -101,6 +112,10 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
+  width: 100%;
+}
+
+img {
   width: 100%;
 }
 
@@ -117,3 +132,18 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 480px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+  main section form {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .alternate-background {
+    display: flex;
+    justify-content: space-between;
+  }
+}
