--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Lato", sans-serif;
+  display: grid;
 }
 
 h2 {
@@ -27,14 +28,11 @@ section {
 
 section.alternate-background {
   background-color: #00a699;
-
   color: #fff;
-  padding: 40px;
 }
 
-#ideas {
-  display: flex;
-  flex-direction: column;
+main img {
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
@@ -63,14 +61,25 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 60px;
   color: #fff;
 }
 
-header nav ul {
-  list-style-type: none;
+header nav {
   display: flex;
+  flex-direction: row;
+  font: sans-serif;
   justify-content: center;
+}
+
+header nav ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+
+header nav ul li {
+  list-style-type: none;
 }
 
 header nav ul li a {
@@ -94,16 +103,15 @@ form label {
   font-weight: bold;
 }
 
+form div {
+  display: flex;
+  justify-content: space-between;
+}
+
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
-}
-form div {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin: 10px;
+  width: 200px;
 }
 
 form button {
@@ -112,10 +120,6 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  width: 100%;
-}
-
-img {
   width: 100%;
 }
 
@@ -132,18 +136,91 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+
 @media all and (min-width: 480px) {
   header {
     display: flex;
     justify-content: space-between;
-  }
-  main section form {
-    display: flex;
-    justify-content: space-between;
+    padding: 0;
   }
 
-  .alternate-background {
+  body {
+    font-family: "Lato", sans-serif;
+    display: grid;
+  }
+
+  .logo {
+    margin: 14px 0 14px 20px;
+    padding-top: 0;
+    font-size: 42px;
+  }
+
+  header nav ul {
+    align-items: center;
+  }
+
+  .group {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  form {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+  }
+
+  form div {
+    flex-direction: column;
+  }
+
+  form button {
+    flex: 1;
+  }
+
+  form select,
+  form input {
+    margin-bottom: 0px;
+  }
+  /*iPhone portrait*/
+  @media only screen and (min-width: 320px) {
+    body {
+      border: 3px solid purple;
+    }
+  }
+
+  /*iPhone landscape*/
+  @media only screen and (min-width: 480px) {
+    body {
+      border: 3px solid green;
+    }
+  }
+
+  /*Android landscape*/
+  @media only screen and (min-width: 640px) {
+    body {
+      border: 3px solid pink;
+    }
+  }
+
+  /*iPad potrait*/
+  @media only screen and (min-width: 768px) {
+    body {
+      border: 3px solid red;
+    }
+  }
+
+  /*iPad lanscape / small laptop*/
+  @media only screen and (min-width: 1024px) {
+    body {
+      border: 3px solid blue;
+    }
+  }
+
+  /*large desktop*/
+  @media only screen and (min-width: 1600px) {
+    body {
+      border: 3px solid yellow;
+    }
   }
 }
